--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/apricotmedia/apricotmedia.github.io#readme",
   "devDependencies": {
+    "autoprefixer": "^9.5.0",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.0",
+    "gulp-postcss": "^8.0.0",
     "sass": "^1.17.4"
   },
   "dependencies": {
