--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "autoprefixer": "^9.5.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.17.4"
   },
   "dependencies": {
