--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.17.4"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "browser-sync": "^2.26.3",
+    "jquery": "^3.3.1",
     "save-dev": "^2.0.0"
   }
 }
